# analystkit

./: .gitignore  GUIDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/analystkit/: __init__.py  __main__.py  ai.py  cli.py  core.py  dbconnect.py  dedupe.py  demo.py  engine.py  profiling.py  reconcile.py  rules.py  summarize.py  teach.py  workpaper.py
tests/: conftest.py  test_ai.py  test_dbconnect.py  test_dedupe.py  test_edges.py  test_hardening.py  test_profiling.py  test_reconcile.py  test_rules.py
