[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "analystkit"
version = "2.0.0"
description = "Data quality & analysis toolkit — DAMA six dimensions, workpaper discipline, re-performable evidence"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [{ name = "Mohd Saif Hussain" }]
dependencies = ["duckdb>=1.5", "openpyxl>=3.1", "pandas>=2.0"]

[project.urls]
Homepage = "https://github.com/MohdSaifHussain/analystkit"
Repository = "https://github.com/MohdSaifHussain/analystkit"

[project.optional-dependencies]
ai = ["anthropic>=0.40"]
dev = ["pytest>=9.0", "mypy>=2.0", "ruff>=0.15"]

[project.scripts]
analystkit = "analystkit.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
analystkit = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
